--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,19 +1,22 @@
 // UTILS
-@import './utils/variables';
-@import './utils/visually-hidden';
-@import './utils/mixins';
+@import './utils/variables.scss';
+@import './utils/visually-hidden.scss';
+@import './utils/mixins.scss';
 
 //BASE
 
-@import './base/common';
-@import './base/container';
+@import './base/common.scss';
+@import './base/container.scss';
 
 // COMPONENTS
 
-@import './components/buttons';
-@import './components/modal';
+@import './components/buttons.scss';
+@import './components/spiner.scss';
+@import './components/modal.scss';
 
 // LAYOUT
 
-@import './layout/header';
-@import './layout/footer';
+@import './layout/header.scss';
+@import './layout/movie-gallery.scss';
+@import './layout/movie-library.scss';
+@import './layout/footer.scss';
