--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,3 +1,13 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 h1,
 h2,
 h3,
@@ -33,9 +43,9 @@ p {
 
 body {
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 12px;
-  line-height: 1.167;
+  line-height: 1.333;
   letter-spacing: 0.02em;
 
   color: var(--primary-color);
