функция по созданию галлереи

--- a/src/templates/cardsMovies.hbs
+++ b/src/templates/cardsMovies.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
 <li class="gallery-movie-item">
-    <img class="movie-card-img" src="{{poster_path}}" alt="{{title}}" loading="lazy" />
+    <img class="movie-card-img" src="https://image.tmdb.org/t/p/w300{{poster_path}}" alt="{{title}}" loading="lazy" />
     <h3 class="movie-card-title">{{original_title}}</h3>
     <div class="movie-card-info">
         <p class="movie-card-genre">{{genres_ids}}</p>
