--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,14 +1,14 @@
-// UTILS
+//UTILS
 @import './utils/variables.scss';
 @import './utils/visually-hidden.scss';
 @import './utils/mixins.scss';
 
-//BASE
+// //BASE
 
 @import './base/common.scss';
 @import './base/container.scss';
 
-// COMPONENTS
+// // COMPONENTS
 
 @import './components/buttons.scss';
 @import './components/spiner.scss';
