repair svg, made styles(media)

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,18 +1,28 @@
 .film-footer {
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.19;
   display: flex;
   align-items: center;
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  background: #f7f7f7;
+  background-color: #f7f7f7;
   color: #545454;
+  padding-top: 30px;
+  padding-bottom: 28px;
 
   @media screen and (min-width: 480px) {
+    font-size: 16px;
     flex-direction: inherit;
+  }
+}
+
+.footer-text {
+  margin-bottom: 10px;
+  @media screen and (min-width: 480px) {
+    margin-bottom: 0px;
   }
 }
 
