--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,7 +11,7 @@
 // // COMPONENTS
 
 @import './components/buttons.scss';
-@import './components/spiner.scss';
+@import './components/pagination.scss';
 @import './components/modal.scss';
 
 // LAYOUT
