Добавлен файл js для рендера крточки, файл sass для ошибки

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 // // COMPONENTS
 
 @import './components/buttons.scss';
+@import './components/error.scss';
 @import './components/pagination.scss';
 @import './components/modal.scss';
 
