Добавлены файлы js для кнопок хедера + обновлены refs.js

--- a/src/templates/header-main.hbs
+++ b/src/templates/header-main.hbs
@@ -1,6 +1,6 @@
 <header class="section-header">
 
-    <div class="container nav-container ">
+    <div class="container nav-container">
         <nav class="site-nav">
             <div class="nav-logo">
                 <a href="./home.html" class="link-logo">
@@ -54,8 +54,8 @@
         </div>
 
         <div class="button-container ">
-            <button type="button" class="button btn-watched is-hidden">Watched</button>
-            <button type="button" class="button btn-queue is-hidden">Queue</button>
+            <button type="button" class="button btn-watched is-hidden" id="js-btn-watched">Watched</button>
+            <button type="button" class="button btn-queue is-hidden" id="js-btn-queue">Queue</button>
         </div>
     </div>
 
