--- a/src/templates/cardsOpenModalMovies.hbs
+++ b/src/templates/cardsOpenModalMovies.hbs
@@ -1,33 +1,24 @@
 <div class="modal-btn__icon"></div>
-<img class="modal-img modal-box-card"
-    src="https://static.wixstatic.com/media/747083_b400ff589ebf474083386cff48221e9d~mv2.jpg/v1/fill/w_880,h_964,al_c,q_90/747083_b400ff589ebf474083386cff48221e9d~mv2.jpg "
-    alt="Названия фильма" />
+<img class="modal-img modal-box-card" src="https://image.tmdb.org/t/p/w300{{poster_path}}" alt="{{title}}" />
 <div class="modal-box-card">
-    <h2 class="modal-title">A FISTFUL OF LEAD</h2>
+    <h2 class="modal-title">{{original_title}}</h2>
     <p class="modal-card-item">
-        Vote / Votes <span class="card-item-vote">7.3</span> /
-        <span class="card-item-vote-count">1260</span>
+        Vote / Votes <span class="card-item-vote">{{vote_average}}</span> /
+        <span class="card-item-vote-count">{{vote_count}}</span>
     </p>
     <p class="modal-card-item">
         Popularity
-        <span class="card-item-popularity">100.2</span>
+        <span class="card-item-popularity">{{popularity}}</span>
     </p>
     <p class="modal-card-item">
-        Original Title<span class="card-item-char">A FISTFUL OF LEAD</span>
+        Original Title<span class="card-item-char">{{original_title}}</span>
     </p>
     <p class="modal-card-item">
-        Genre<span class="card-item-genre">Western </span>
+        Genre<span class="card-item-genre">{{genres}}</span>
     </p>
     <h3 class="modal-about-title">About</h3>
     <p class="modal-text">
-        Four of the West's most infamous outlaws assemble to steal a huge
-        stash of gold from the most corrupt settlement of the gold rush
-        towns. But not all goes to plan one is killed and the other three
-        escapes with bags of gold hide out in the abandoned gold mine
-        where they happen across another gang of three – who themselves
-        were planning to hit the very same bank! As tensions rise, things
-        go from bad to worse as they realise the bags of gold are filled
-        with lead... they've been double crossed – but by who and how?
+        {{overview}}
     </p>
     <div class="div">
         <button class="button-left-side modal-button">add to Watched</button>
