--- a/src/templates/header-main.hbs
+++ b/src/templates/header-main.hbs
@@ -40,7 +40,7 @@
             </div>
         </nav>
         <div class="input-search-container">
-            <form action="#" class="form-search">
+            <form action="#" class="form-search" id="search-film">
                 <input type="text" class="search-field" name="query" placeholder="Search films" autocomplete="off" />
 
                 <svg class="icon-search" width="12" height="12" viewBox="0 0 12 12" fill="none"
