--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,10 +1,8 @@
-@media screen and (min-width: 320px) {
-  .container {
-    max-width: 320px;
-    margin: 0 auto;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+.container {
+  max-width: 100%;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 @media screen and (min-width: 768px) {
