--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,23 +1,12 @@
 //UTILS
-@import './utils/variables.scss';
-@import './utils/visually-hidden.scss';
-@import './utils/mixins.scss';
+@import './utils/';
 
 // //BASE
-
-@import './base/common.scss';
-@import './base/container.scss';
+@import './base/';
 
 // // COMPONENTS
-
-@import './components/buttons.scss';
-@import './components/error.scss';
-@import './components/pagination.scss';
-@import './components/modal.scss';
+@import './components/';
 
 // LAYOUT
 
-@import './layout/header.scss';
-@import './layout/movie-gallery.scss';
-@import './layout/movie-library.scss';
-@import './layout/footer.scss';
+@import './layout/';
