--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,48 +1,47 @@
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-
-  z-index: 1000;
-  background-color: rgba(0, 0, 0, 0.25);
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.is-open {
-  visibility: visible;
-  opacity: 1;
-  pointer-events: auto;
-}
-
 .modal {
-  position: absolute;
+  position: fixed;
+
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal__body {
+  min-height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 20px;
+  overflow-y: scroll;
+}
+
+.modal__content {
+  background-color: #fefefe;
+  color: #000;
+  max-width: 848px;
   padding-top: 48px;
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 40px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  width: 100%;
-  max-width: 280px;
-  height: 100%;
-  max-height: 100vh;
-  background-color: var(--secondary-color);
-  overflow-y: scroll;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  visibility: visible;
+  position: relative;
+
   @media screen and (min-width: 768px) {
     display: flex;
-    max-width: 618px;
   }
+
   @media screen and (min-width: 1023px) {
     display: flex;
-    max-width: 882px;
   }
+}
+
+.modal-item .modal-item__vote {
+  display: inline-block;
+  width: 122px;
+  margin-right: 30px;
 }
 
 .modal-img {
@@ -67,10 +66,10 @@
   margin-bottom: 20px;
 }
 
-.modal-card-item {
+.modal-item__vote {
   color: #8c8c8c;
 }
-.modal-card-item:not(:last-child) {
+.modal-item__vote:not(:last-child) {
   margin-bottom: 10px;
 }
 
@@ -79,33 +78,18 @@
   margin-bottom: 10px;
 }
 
-.card-item-char {
-  margin-left: 40px;
-  color: var(--primary-color);
-}
-
-.card-item-vote {
-  margin-left: 41px;
+.modal-item__votes {
   padding: 1px 10px;
   color: var(--secondary-color);
   background-color: var(--accent-color);
   border-radius: 5px;
 }
 
-.card-item-vote-count {
+.modal-item__count {
   padding: 1px 4px;
   color: var(--primary-color);
   background-color: #f7f7f7;
   border-radius: 5px;
-}
-
-.card-item-genre {
-  margin-left: 76px;
-  color: var(--primary-color);
-}
-.card-item-popularity {
-  margin-left: 50px;
-  color: var(--primary-color);
 }
 
 .modal-text {
