--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -1,20 +1,60 @@
-.pagination-container {
-  display: flex;
-  width: 480px;
-  margin: 0 auto;
-  margin-bottom: 60px;
-}
-.pagination-list {
-  height: 40px;
-  margin: 0 auto;
-  list-style: none;
-  display: flex;
-  padding: 0 10px;
-  min-width: 200px;
-  width: fit-content;
-  position: relative;
-  align-items: center;
-  justify-content: center;
+.pagination {
+  &-container {
+    // mixins
+    display: flex;
+    justify-content: center;
+    // margin: 0 auto;
+    margin-bottom: 60px;
+  }
+
+  &-btns {
+    height: 40px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 10px;
+    min-width: 200px;
+    width: fit-content;
+    // position: relative;
+  }
+
+  &-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
+    background-color: transparent;
+
+    &:not(:last-child) {
+      margin-right: 16px;
+    }
+    &:hover,
+    &:focus {
+      width: 40px;
+      height: 40px;
+      background-color: var(--accent-color);
+      color: var(--secondary-color);
+    }
+    &:active {
+      box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.521);
+    }
+  }
+  &-button.active {
+    width: 40px;
+    height: 40px;
+    background-color: var(--accent-color);
+    color: var(--secondary-color);
+    margin-right: 16px;
+  }
 }
 
 .arrow-btn {
@@ -23,68 +63,33 @@
   font-size: 30px;
   background-color: #f7f7f7;
   border-radius: 5px;
+  text-align: center;
   border: none;
   outline: none;
+
+  &:hover {
+    background-color: var(--accent-color); // scss variables
+    color: var(--secondary-color);
+  }
 }
-.arrow-btn:hover {
-  background-color: var(--accent-color);
-  color: var(--secondary-color);
-}
+
 .arrow-btn:focus {
   border: 1px solid #0000004d;
 }
 .arrow-btn:active {
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.562);
 }
-.active {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  border-radius: 5px;
-  border: none;
-  outline: none;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 20px;
+.pagination-button.active {
   width: 40px;
   height: 40px;
   background-color: var(--accent-color);
   color: var(--secondary-color);
   margin-right: 16px;
 }
-.pagination-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  border-radius: 5px;
-  border: none;
-  outline: none;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 20px;
-}
-.pagination-item:not(:last-child) {
-  margin-right: 16px;
-}
+
 .interval {
   margin-right: 16px;
   font-size: 30px;
-}
-.pagination-item:hover,
-.pagination-item:focus {
-  width: 40px;
-  height: 40px;
-  background-color: var(--accent-color);
-  color: var(--secondary-color);
-}
-.pagination-item:active {
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.562);
 }
 .hidden {
   display: none;
