--- a/src/templates/pagination.hbs
+++ b/src/templates/pagination.hbs
@@ -1,7 +1,7 @@
 <div class="pagination-container">
     <button id="arrow-left" class="arrow-btn">&lt;</button>
-    <ul id="pagination-list" class="pagination-list">
-        <li id="first-page" class="pagination-item">1</li>
+    <div id="pagination-btns" class="pagination-btns">
+        {{!-- <li id="first-page" class="pagination-item">1</li>
         <li id="interval1" class="interval">...</li>
         <li id="prev-sibling2" class="pagination-item"></li>
         <li id="prev-sibling1" class="pagination-item"></li>
@@ -9,7 +9,7 @@
         <li id="next-sibling1" class="pagination-item"></li>
         <li id="next-sibling2" class="pagination-item"></li>
         <li id="interval2" class="interval">...</li>
-        <li id="last-page" class="pagination-item"></li>
-    </ul>
+        <li id="last-page" class="pagination-item"></li> --}}
+    </div>
     <button id="arrow-right" class="arrow-btn">&gt;</button>
 </div>
