--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -5,18 +5,21 @@
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  // z-index: 100;
 
   background-color: rgba(0, 0, 0, 0.8);
 }
 
 .modal__body {
   min-height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex(center, center);
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
   padding: 30px 20px;
   overflow-y: scroll;
+  z-index: 1010;
+  position: relative;
 }
 
 .modal-content {
@@ -27,14 +30,10 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 40px;
-  position: relative;
+  // position: relative;
 
-  @media screen and (min-width: 768px) {
-    display: flex;
-  }
-
-  @media screen and (min-width: 1023px) {
-    display: flex;
+  @include tablet {
+    @include flex;
   }
 }
 
@@ -48,7 +47,7 @@
   width: 240px;
   height: 356px;
   margin-bottom: 30px;
-
+  // mixins
   @media screen and (min-width: 768px) {
     width: 264px;
     height: 374px;
@@ -62,8 +61,10 @@
   }
 }
 
-.modal-title {
-  margin-bottom: 20px;
+.modal {
+  &-title {
+    margin-bottom: 20px;
+  }
 }
 
 .modal-item__vote {
@@ -119,9 +120,9 @@
 
 .modal-btn__icon {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  background-image: url(../images/close.svg);
-  width: 30px;
-  height: 30px;
+  top: 40px;
+  right: 40px;
+  color: #000;
+  font-size: 30px;
+  z-index: 1000;
 }
