--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -12,11 +12,11 @@
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.is-open {
-  visibility: visible;
-  opacity: 1;
-  pointer-events: auto;
-}
+// .is-open {
+//   visibility: visible;
+//   opacity: 1;
+//   pointer-events: auto;
+// }
 
 .modal {
   position: absolute;
@@ -34,7 +34,7 @@
   background-color: var(--secondary-color);
   overflow-y: scroll;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  visibility: visible;
+  visibility: hidden;
   @media screen and (min-width: 768px) {
     display: flex;
     max-width: 618px;
@@ -43,6 +43,12 @@
     display: flex;
     max-width: 882px;
   }
+}
+
+.modal.is-open {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .modal-img {
