--- a/src/templates/header-main.hbs
+++ b/src/templates/header-main.hbs
@@ -26,28 +26,29 @@
                             stroke-linejoin="round" />
                     </svg>
                 </a>
-                <a href="#" class="logo header-logo">
+                <a href="/" class="logo header-logo">
                     <span class="logo-text rubberBand">Filmoteka</span>
                 </a>
             </div>
 
-            <div class="site-list-nav">
+            <div class="header-list-nav">
                 <ul class="list-nav">
                     <li class="list-nav-item">
-                        <a class="list-item-link currant" href='#'>Home</a>
+                        <a class="list-item-link active" href='/'>Home</a>
                         {{!-- <a class="list-item-link currant" href={{pathH}}>Home</a> --}}
                     </li>
                     <li class="list-nav-item item-library">
-                        <a class="list-item-link" href='#'>My Library</a>
+                        <a class="list-item-link" href='/my-library'>My Library</a>
+
                         {{!-- <a class="list-item-link" href={{pathL}}>My Library</a> --}}
                     </li>
                 </ul>
             </div>
 
         </nav>
-        <div class="input-search-container">
+        <div class="header-search-container">
 
-            <form action="#" class="form-search">
+            <form action="#" id='search-film' class="form-search">
                 <input type="text" class="search-field" name="query" placeholder="Search films" autocomplete="off" />
 
                 <svg class="icon-search" width="12" height="12" viewBox="0 0 12 12" fill="none"
@@ -63,8 +64,8 @@
         </div>
 
         <div class="button-container ">
-            <button type="button" class="button btn-watched is-hidden " id="js-btn-watched">Watched</button>
-            <button type="button" class="button btn-queue is-hidden " id="js-btn-queue">Queue</button>
+            <button type="button" class="button btn-watched-outline is-hidden " id="js-btn-watched">Watched</button>
+            <button type="button" class="button btn-queue-outline is-hidden " id="js-btn-queue">Queue</button>
         </div>
     </div>
 
