--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -1,8 +1,7 @@
-.input-search-container {
+.header-search-container {
   max-width: 280px;
   padding-top: 58px;
   position: relative;
-  display: block;
   text-align: center;
   margin-right: auto;
   margin-left: auto;
@@ -12,13 +11,13 @@
   background-color: transparent;
   border: transparent;
   border: none;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid var(--secondary-color);
   font-size: 14px;
   line-height: 1.14;
   outline: none;
 
   &::placeholder {
-    color: #ffffff;
+    color: var(--secondary-color);
     transition: color 250ms linear;
     opacity: 1;
   }
@@ -29,10 +28,9 @@
 }
 
 input[type='text'] {
-  color: #ffffff;
+  color: var(--secondary-color);
   padding-bottom: 4px;
-  font-family: Roboto;
-  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   line-height: 1.14;
 }
