--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -13,7 +13,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #000000;
+  background-color: var(--primary-color);
   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
     url('../images/mobile/mobile-header-home.jpg');
 
@@ -24,9 +24,7 @@
 }
 
 .header-nav {
-  @include flex;
-  justify-content: space-between;
-  align-items: center;
+  @include flex(space-between, center);
 }
 
 .list-nav {
@@ -54,18 +52,18 @@
   transition: color 250ms linear;
 
   &:hover {
-    color: #ff6b08;
+    color: var(--accent-color);
   }
 }
 
-.currant::after {
+.active::after {
   position: absolute;
   content: '';
   left: 0;
   bottom: 0;
   width: 100%;
   height: 3px;
-  background: #ff6b08;
+  background: var(--accent-color);
 }
 
 @include tablet {
