--- a/src/templates/filmInfo.hbs
+++ b/src/templates/filmInfo.hbs
@@ -1,33 +1,33 @@
-<img class="modal-img modal-box-card"
+<img class="film-info__img film-info__box-card"
     src="https://static.wixstatic.com/media/747083_b400ff589ebf474083386cff48221e9d~mv2.jpg/v1/fill/w_880,h_964,al_c,q_90/747083_b400ff589ebf474083386cff48221e9d~mv2.jpg "
     alt="Названия фильма" width="200" height="200" />
-<div class="modal-box-card">
-    <h2 class="modal-title">A FISTFUL OF LEAD</h2>
-    <ul class="modal-list list">
-        <li class="modal-item">
-            <span class="modal-item__vote">Vote / Votes</span>
-            <span class="modal-item__characteristic">
-                <span class="modal-item__votes">7.3</span>
-                <span class="modal-item__slash">/</span>
-                <span class="modal-item__count">1260</span>
+<div class="film-info__box-card">
+    <h2 class="film-info__title">A FISTFUL OF LEAD</h2>
+    <ul class="film-info__list list">
+        <li class="film-info__list-item">
+            <span class="film-info__list-item--vote">Vote / Votes</span>
+            <span class="film-info__list-item--characteristic">
+                <span class="film-info__list-item--votes">7.3</span>
+                <span class="film-info__list-item--slash">/</span>
+                <span class="film-info__list-item--count">1260</span>
             </span>
         </li>
-        <li class="modal-item">
-            <span class="modal-item__vote">Popularity</span>
-            <span class="modal-item__characteristic">100.2</span>
+        <li class="film-info__list-item">
+            <span class="film-info__list-item--vote">Popularity</span>
+            <span class="film-info__list-item--characteristic">100.2</span>
         </li>
-        <li class="modal-item">
-            <span class="modal-item__vote">Original Title</span>
-            <span class="modal-item__characteristic">A FISTFUL OF LEAD</span>
+        <li class="film-info__list-item">
+            <span class="film-info__list-item--vote">Original Title</span>
+            <span class="film-info__list-item--characteristic">A FISTFUL OF LEAD</span>
         </li>
-        <li class="modal-item">
-            <span class="modal-item__vote">Genre</span>
-            <span class="modal-item__characteristic">Western</span>
+        <li class="film-info__list-item">
+            <span class="film-info__list-item--vote">Genre</span>
+            <span class="film-info__list-item--characteristic">Western</span>
         </li>
     </ul>
 
-    <h3 class="modal-about-title">About</h3>
-    <p class="modal-text">
+    <h3 class="film-info__about--title">About</h3>
+    <p class="film-info__text">
         Four of the West’s most infamous outlaws assemble to steal a huge/
         Four of the West's most infamous outlaws assemble to steal a huge
         stash of gold from the most corrupt settlement of the gold rush
@@ -40,6 +40,6 @@
         lead... they've been double crossed – but by who and how?
     </p>
     <div class="film-info-actions">
-        <button class="btn btn-outline modal-button">add to Watched</button>
-        <button class="btn btn-outline modal-button">add to queue</button>
+        <button class="btn btn-outline film-info__button">add to Watched</button>
+        <button class="btn btn-outline film-info__button">add to queue</button>
     </div>
