--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -5,124 +5,131 @@
   top: 0;
   width: 100%;
   height: 100%;
-  // z-index: 100;
 
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-.modal__body {
-  min-height: 100%;
-  @include flex(center, center);
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
-  padding: 30px 20px;
-  overflow-y: scroll;
-  z-index: 1010;
-  position: relative;
+.is-open {
+  opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
 }
 
-.modal-content {
-  background-color: #fefefe;
-  color: #000;
-  max-width: 848px;
-  padding-top: 48px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 40px;
-  // position: relative;
+.modal {
+  &__body {
+    min-height: 100%;
+    @include flex(center, center);
+    padding: 30px 20px;
+    overflow-y: scroll;
+    z-index: 1010;
+    position: relative;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 
-  @include tablet {
-    @include flex;
+  &-content {
+    background-color: #fefefe;
+    color: #000;
+    max-width: 848px;
+    padding-top: 48px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 40px;
+
+    @include tablet {
+      @include flex;
+    }
+  }
+
+  &-btn__icon {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    color: #000;
+    font-size: 30px;
+    z-index: 1000;
   }
 }
 
-.modal-item .modal-item__vote {
-  display: inline-block;
-  width: 122px;
-  margin-right: 30px;
-}
-
-.modal-img {
+.film-info__img {
   width: 240px;
   height: 356px;
   margin-bottom: 30px;
   // mixins
-  @media screen and (min-width: 768px) {
+  @include tablet {
     width: 264px;
     height: 374px;
     margin-right: 32px;
   }
 
-  @media screen and (min-width: 1023px) {
+  @include desktop {
     width: 396px;
     height: 478px;
     margin-right: 30px;
   }
 }
 
-.modal {
-  &-title {
+.film-info {
+  &__title {
     margin-bottom: 20px;
   }
-}
 
-.modal-item__vote {
-  color: #8c8c8c;
-}
-.modal-item__vote:not(:last-child) {
-  margin-bottom: 10px;
-}
+  &__list-item {
+    display: inline-block;
+    width: 122px;
+    margin-right: 30px;
 
-.modal-about-title {
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
+    &--vote {
+      color: #8c8c8c;
 
-.modal-item__votes {
-  padding: 1px 10px;
-  color: var(--secondary-color);
-  background-color: var(--accent-color);
-  border-radius: 5px;
-}
+      &:not(:last-child) {
+        margin-bottom: 10px;
+      }
+    }
 
-.modal-item__count {
-  padding: 1px 4px;
-  color: var(--primary-color);
-  background-color: #f7f7f7;
-  border-radius: 5px;
-}
+    &--votes {
+      padding: 1px 10px;
+      color: var(--secondary-color);
+      -color: var(--accent-color);
+      border-radius: 5px;
+    }
 
-.modal-text {
-  margin-bottom: 20px;
-  line-height: 1.66;
-}
+    &--count {
+      padding: 1px 4px;
+      color: var(--primary-color);
+      background-color: #f7f7f7;
+      border-radius: 5px;
+    }
+  }
 
-.modal-button {
-  padding: 14px 10px;
-  border: 1px solid var(--primary-color);
-  box-sizing: border-box;
-  border-radius: 5px;
-  background-color: var(--secondary-color);
-  text-align: center;
-  text-transform: uppercase;
-}
+  &__about--title {
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
 
-.modal-button:hover,
-.modal-button:focus {
-  border: none;
-  background-color: var(--accent-color);
-  color: var(--secondary-color);
-}
-.modal-button:not(:last-child) {
-  margin-right: 10px;
-}
+  &--text {
+    margin-bottom: 20px;
+    line-height: 1.66;
+  }
+  &--button {
+    padding: 14px 10px;
+    border: 1px solid var(--primary-color);
+    box-sizing: border-box;
+    border-radius: 5px;
+    background-color: var(--secondary-color);
+    text-align: center;
+    text-transform: uppercase;
 
-.modal-btn__icon {
-  position: absolute;
-  top: 40px;
-  right: 40px;
-  color: #000;
-  font-size: 30px;
-  z-index: 1000;
+    &:hover,
+    &:focus {
+      border: none;
+      background-color: var(--accent-color);
+      color: var(--secondary-color);
+    }
+
+    &:not(:last-child) {
+      margin-right: 10px;
+    }
+  }
 }
