--- a/src/templates/header-main.hbs
+++ b/src/templates/header-main.hbs
@@ -26,7 +26,7 @@
                             stroke-linejoin="round" />
                     </svg>
                 </a>
-                <a href="/" class="logo header-logo">
+                <a href="./index.html" class="logo header-logo">
                     <span class="logo-text rubberBand">Filmoteka</span>
                 </a>
             </div>
@@ -34,7 +34,7 @@
             <div class="header-list-nav">
                 <ul class="list-nav">
                     <li class="list-nav-item">
-                        <a class="list-item-link active" href='/'>Home</a>
+                        <a class="list-item-link active" href='./index.html'>Home</a>
                         {{!-- <a class="list-item-link currant" href={{pathH}}>Home</a> --}}
                     </li>
                     <li class="list-nav-item item-library">
