Исправили общий класс

--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -36,7 +36,7 @@
 .arrow-btn:active {
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.562);
 }
-.active {
+.current-page {
   display: flex;
   align-items: center;
   justify-content: center;
