--- a/src/templates/modal-window.hbs
+++ b/src/templates/modal-window.hbs
@@ -1,8 +1,8 @@
-<div class="backdrop">
+{{!-- <div class="backdrop">
 </div>
 <div class="modal js-modal">
     <div class="modal-btn__icon"></div>
-    <div class="modal-content"></div>
+    <div class="modal-content"></div> --}}
     {{!-- <img class="modal-img modal-box-card"
         src="https://static.wixstatic.com/media/747083_b400ff589ebf474083386cff48221e9d~mv2.jpg/v1/fill/w_880,h_964,al_c,q_90/747083_b400ff589ebf474083386cff48221e9d~mv2.jpg "
         alt="Названия фильма" />
@@ -38,4 +38,5 @@
             <button class="button-right-side modal-button">add to queue</button>
         </div>
     </div> --}}
-</div>
+    {{!--
+</div> --}}
