Fixing HTTP Service

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -9,7 +9,7 @@
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-.is-open {
+.js-modal.is-open {
   opacity: 1;
   pointer-events: auto;
   visibility: visible;
