--- a/src/templates/modal-window.hbs
+++ b/src/templates/modal-window.hbs
@@ -1,5 +1,5 @@
 <div class="backdrop"></div>
-<div class="modal__body js-modal">
+<div class="modal__body js-modal is-open">
     <span class="modal-btn__icon">&times;</span>
     <div class="modal-content"></div>
 </div>
