--- a/src/templates/filmInfo.hbs
+++ b/src/templates/filmInfo.hbs
@@ -4,28 +4,28 @@
     <h2 class="film-info__title">{{original_title}}</h2>
     <ul class="film-info__list list">
         <li class="film-info__list-item">
-            <span class="film-info__list-item--vote">Vote / Votes</span>
-            <span class="film-info__list-item--characteristic">
-                <span class="film-info__list-item--votes">{{vote_average}}</span>
-                <span class="film-info__list-item--slash">/</span>
-                <span class="film-info__list-item--count">{{vote_count}}</span>
+            <span class="film-info__list-item__vote">Vote / Votes</span>
+            <span class="film-info__list-item__characteristic">
+                <span class="film-info__list-item__votes">{{vote_average}}</span>
+                <span class="film-info__list-item__slash">/</span>
+                <span class="film-info__list-item__count">{{vote_count}}</span>
             </span>
         </li>
         <li class="film-info__list-item">
-            <span class="film-info__list-item--vote">Popularity</span>
-            <span class="film-info__list-item--characteristic">{{popularity}}</span>
+            <span class="film-info__list-item__vote">Popularity</span>
+            <span class="film-info__list-item__characteristic">{{popularity}}</span>
         </li>
         <li class="film-info__list-item">
-            <span class="film-info__list-item--vote">Original Title</span>
-            <span class="film-info__list-item--characteristic">{{original_title}}</span>
+            <span class="film-info__list-item__vote">Original Title</span>
+            <span class="film-info__list-item__characteristic">{{original_title}}</span>
         </li>
         <li class="film-info__list-item">
-            <span class="film-info__list-item--vote">Genre</span>
-            <span class="film-info__list-item--characteristic">{{genres}}</span>
+            <span class="film-info__list-item__vote">Genre</span>
+            <span class="film-info__list-item__characteristic">{{genreList}}</span>
         </li>
     </ul>
 
-    <h3 class="film-info__about--title">About</h3>
+    <h3 class="film-info-about__title">About</h3>
     <p class="film-info__text">
         {{overview}}
     </p>
