--- a/src/sass/components/_filmInfo.scss
+++ b/src/sass/components/_filmInfo.scss
@@ -1,29 +1,29 @@
 .film-info {
   &__title {
     margin-bottom: 20px;
+    font-size: 20px;
   }
 
   &__list-item {
-    display: inline-block;
-    width: 122px;
-    margin-right: 30px;
-
-    &--vote {
+    &__vote {
       color: #8c8c8c;
+      display: inline-block;
+      width: 122px;
+      margin-right: 30px;
 
       &:not(:last-child) {
         margin-bottom: 10px;
       }
     }
 
-    &--votes {
+    &__votes {
       padding: 1px 10px;
       color: var(--secondary-color);
-      -color: var(--accent-color);
+      background-color: var(--accent-color);
       border-radius: 5px;
     }
 
-    &--count {
+    &__count {
       padding: 1px 4px;
       color: var(--primary-color);
       background-color: #f7f7f7;
@@ -31,16 +31,24 @@
     }
   }
 
-  &__about--title {
+  &-about__title {
     margin-top: 20px;
     margin-bottom: 10px;
   }
 
-  &--text {
+  &__text {
     margin-bottom: 20px;
     line-height: 1.66;
+    width: 240px;
+
+    @include tablet {
+      width: 266px;
+    }
+    @include desktop {
+      width: 396px;
+    }
   }
-  &--button {
+  &__button {
     padding: 14px 10px;
     border: 1px solid var(--primary-color);
     box-sizing: border-box;
@@ -58,6 +66,24 @@
 
     &:not(:last-child) {
       margin-right: 10px;
+    }
+  }
+
+  &__img {
+    width: 240px;
+    height: 356px;
+    margin-bottom: 30px;
+    // mixins
+    @include tablet {
+      width: 264px;
+      height: 374px;
+      margin-right: 32px;
+    }
+
+    @include desktop {
+      width: 396px;
+      height: 478px;
+      margin-right: 30px;
     }
   }
 }
