--- a/src/sass/components/_filmInfo.scss
+++ b/src/sass/components/_filmInfo.scss
@@ -60,4 +60,21 @@
       margin-right: 10px;
     }
   }
+  &__img {
+    width: 240px;
+    height: 356px;
+    margin-bottom: 30px;
+    // mixins
+    @include tablet {
+      width: 264px;
+      height: 374px;
+      margin-right: 32px;
+    }
+
+    @include desktop {
+      width: 396px;
+      height: 478px;
+      margin-right: 30px;
+    }
+  }
 }
