--- a/src/templates/filmInfo.hbs
+++ b/src/templates/filmInfo.hbs
@@ -40,6 +40,6 @@
         lead... they've been double crossed – but by who and how?
     </p>
     <div class="film-info-actions">
-        <button class="btn btn-outline film-info__button btn-watched">add to Watched</button>
-        <button class="btn btn-outline film-info__button btn-queue">add to queue</button>
+        <button class="btn btn-outline film-info__button btn-watched" data-film-id="1">add to Watched</button>
+        <button class="btn btn-outline film-info__button btn-queue" data-film-id="1">add to queue</button>
     </div>
