--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -13,7 +13,7 @@
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.is-open {
+.modal__body.is-open {
   visibility: visible;
   opacity: 1;
   pointer-events: auto;
@@ -67,12 +67,9 @@
     margin-right: 32px;
   }
 
-
   @include desktop {
     width: 396px;
     height: 478px;
     margin-right: 30px;
   }
 }
-
-
