--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 
   z-index: 1000;
   background-color: rgba(0, 0, 0, 0.25);
@@ -12,11 +12,6 @@
   opacity: 0;
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.is-open {
-  visibility: visible;
-  opacity: 1;
-  pointer-events: auto;
 }
 
 .modal {
@@ -56,23 +51,8 @@
   }
 }
 
-.film-info__img {
-  width: 240px;
-  height: 356px;
-  margin-bottom: 30px;
-  // mixins
-  @include tablet {
-    width: 264px;
-    height: 374px;
-    margin-right: 32px;
-  }
-
-
-  @include desktop {
-    width: 396px;
-    height: 478px;
-    margin-right: 30px;
-  }
+.modal__body.is-open {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
 }
-
-
