--- a/src/sass/components/_error.scss
+++ b/src/sass/components/_error.scss
@@ -1,9 +1,9 @@
 .form-search {
   position: relative;
 }
-
 .error-message {
+  position: absolute;
   margin-top: 22px;
   text-align: center;
-  color: red;
+  color: $error-color;
 }
