--- a/src/sass/layout/_movie-gallery.scss
+++ b/src/sass/layout/_movie-gallery.scss
@@ -1,17 +1,22 @@
 .cards-movies {
-  padding-top: 60px;
-  padding-bottom: 71px;
+  padding-top: 20px;
+  padding-bottom: 40px;
+}
+@include tablet {
+  .cards-movies {
+    padding-top: 60px;
+    padding-bottom: 71px;
+  }
 }
 .js-gallery-movies {
   @include grid(274px, auto-fill);
-  // grid-template-rows: repeat(auto-fill, minmax(440px, 1fr));
   grid-gap: 30px;
 }
-
 .movie-card {
   &-img {
     border-radius: 5px;
     width: 100%;
+    height: 398px;
     transition: transform 250ms linear;
     cursor: pointer;
     &:hover {
@@ -25,7 +30,7 @@
     margin-top: 10px;
   }
   &-info {
-    @include flex(center, center);
+    @include flex(start, center);
     color: #ff6b01; // add colors to variables
     font-weight: 500;
     font-size: 12px;
