--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,5 +4,7 @@
   --accent-color: #ff6b08;
 }
 
-$tablet-breakpoint: 1200px;
-$mobile-breakpoint: 480px;
+$primary-color: #000000;
+$secondary-color: #ffffff;
+$accent-color: #ff6b08;
+$error-color: #ff001b;
