--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -11,13 +11,13 @@
   background-color: transparent;
   border: transparent;
   border: none;
-  border-bottom: 1px solid var(--secondary-color);
+  border-bottom: 1px solid $secondary-color;
   font-size: 14px;
   line-height: 1.14;
   outline: none;
 
   &::placeholder {
-    color: var(--secondary-color);
+    color: $secondary-color;
     transition: color 250ms linear;
     opacity: 1;
   }
@@ -28,7 +28,7 @@
 }
 
 input[type='text'] {
-  color: var(--secondary-color);
+  color: $secondary-color;
   padding-bottom: 4px;
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
