--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -37,8 +37,8 @@
     &:focus {
       width: 40px;
       height: 40px;
-      background-color: var(--accent-color);
-      color: var(--secondary-color);
+      background-color: $accent-color;
+      color: $secondary-color;
     }
     &:active {
       box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.521);
@@ -47,8 +47,8 @@
   &-button.current-page {
     width: 40px;
     height: 40px;
-    background-color: var(--accent-color);
-    color: var(--secondary-color);
+    background-color: $accent-color;
+    color: $secondary-color;
     margin-right: 16px;
   }
 }
@@ -57,14 +57,14 @@
   width: 40px;
   height: 40px;
   font-size: 30px;
-  background-color: #f7f7f7;
+  background-color: $secondary-bg-color;
   border-radius: 5px;
   border: none;
   outline: none;
 }
 .arrow-btn:hover {
-  background-color: var(--accent-color);
-  color: var(--secondary-color);
+  background-color: $accent-color;
+  color: $secondary-color;
 }
 .arrow-btn:focus {
   border: 1px solid #0000004d;
@@ -88,8 +88,8 @@
   line-height: 20px;
   width: 40px;
   height: 40px;
-  background-color: var(--accent-color);
-  color: var(--secondary-color);
+  background-color: $accent-color;
+  color: $accent-color;
   margin-right: 16px;
 }
 .pagination-item {
@@ -101,8 +101,8 @@
   outline: none;
 
   &:hover {
-    background-color: var(--accent-color); // scss variables
-    color: var(--secondary-color);
+    background-color: $accent-color;
+    color: $secondary-color;
   }
   &:focus {
     border: 1px solid #0000004d;
