--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -8,8 +8,8 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  background-color: #f7f7f7;
-  color: #545454;
+  background-color: $secondary-bg-color;
+  color: $additional-color;
   padding-top: 30px;
   padding-bottom: 28px;
 
