--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -13,7 +13,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-color: var(--primary-color);
+  background-color: $primary-color;
   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
     url('../images/mobile/mobile-header-home.jpg');
 
@@ -48,11 +48,11 @@
 
 .list-item-link {
   text-decoration: none;
-  color: #ffffff;
+  color: $secondary-color;
   transition: color 250ms linear;
 
   &:hover {
-    color: var(--accent-color);
+    color: $accent-color;
   }
 }
 
@@ -63,7 +63,7 @@
   bottom: 0;
   width: 100%;
   height: 3px;
-  background: var(--accent-color);
+  background: $accent-color;
 }
 
 @include tablet {
