--- a/src/sass/components/_filmInfo.scss
+++ b/src/sass/components/_filmInfo.scss
@@ -60,6 +60,7 @@
     &:hover,
     &:focus {
       border: none;
+      outline: none;
       background-color: var(--accent-color);
       color: var(--secondary-color);
     }
