--- a/src/templates/filmList.hbs
+++ b/src/templates/filmList.hbs
@@ -1,8 +1,8 @@
 {{#each this}}
 <li class="gallery-movie-item">
-    <img class="movie-card-img" src="https://image.tmdb.org/t/p/w300{{poster_path}}" alt="{{title}}"
+    <img class="movie-card-img js-open-modal" src="https://image.tmdb.org/t/p/w300{{poster_path}}" alt="{{title}}"
         data-film-id="{{id}}" />
-    <h3 class="movie-card-title">{{original_title}}</h3>
+    <h3 class="movie-card-title js-open-modal" data-film-id="{{id}}">{{original_title}}</h3>
     <div class="movie-card-info">
         <p class="movie-card-genre">{{genreList}}</p>
         <p class="movie-card-release-year">{{release_date}}</p>
