--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -16,12 +16,13 @@
 
 .modal {
   &__body {
-    min-height: 100%;
+    position: fixed;
     @include flex(center, center);
-    padding: 30px 20px;
-    overflow-y: scroll;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    // padding: 30px 20px;
     z-index: 1010;
-    position: relative;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -35,6 +36,7 @@
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 40px;
+    overflow-y: scroll;
 
     @include tablet {
       @include flex;
@@ -43,8 +45,10 @@
 
   &-btn__icon {
     position: absolute;
-    top: 40px;
-    right: 40px;
+    top: 0;
+    right: 10px;
+
+    // transform: translate(-18%, -2%);
     color: #000;
     font-size: 30px;
     z-index: 1000;
@@ -52,6 +56,12 @@
 }
 
 .modal__body.is-open {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.backdrop.is-open {
   visibility: visible;
   opacity: 1;
   pointer-events: auto;
