--- a/src/templates/header-main.hbs
+++ b/src/templates/header-main.hbs
@@ -1,10 +1,9 @@
-<header class="section-header ">
+<header class="section-header header-home-bg">
 
     <div class="container">
         <nav class="header-nav">
-
             <div>
-                <a href="#" class="header-icon">
+                <a href="/" class="header-icon">
                     <svg class="icon-film" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -34,40 +33,18 @@
             <div class="header-list-nav">
                 <ul class="list-nav">
                     <li class="list-nav-item">
-                        <a class="list-item-link active" href='./index.html'>Home</a>
-                        {{!-- <a class="list-item-link currant" href={{pathH}}>Home</a> --}}
+                        <a class="list-item-link active" href='/'>Home</a>
                     </li>
-                    <li class="list-nav-item item-library">
+                    <li class="list-nav-item">
                         <a class="list-item-link" href='/my-library'>My Library</a>
-
-                        {{!-- <a class="list-item-link" href={{pathL}}>My Library</a> --}}
                     </li>
                 </ul>
             </div>
 
         </nav>
-
-        <div class="header-search-container">
-            <form action="#" id='search-film' class="form-search">
-
-                <input type="text" class="search-field" name="query" placeholder="Search films" autocomplete="off" />
-
-                <svg class="icon-search" width="12" height="12" viewBox="0 0 12 12" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M5.5 9.5C7.70914 9.5 9.5 7.70914 9.5 5.5C9.5 3.29086 7.70914 1.5 5.5 1.5C3.29086 1.5 1.5 3.29086 1.5 5.5C1.5 7.70914 3.29086 9.5 5.5 9.5Z"
-                        stroke="white" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M10.5 10.5002L8.32495 8.3252" stroke="white" stroke-linecap="round"
-                        stroke-linejoin="round" />
-                </svg>
-            </form>
-
+        <div id="header-page-content">
         </div>
 
-        <div class="button-container ">
-            <button type="button" class="button btn-watched-outline is-hidden " id="js-btn-watched">Watched</button>
-            <button type="button" class="button btn-queue-outline is-hidden " id="js-btn-queue">Queue</button>
-        </div>
     </div>
 
 </header>
