--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -41,7 +41,6 @@
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 40px;
-    overflow-y: scroll;
 
     @include tablet {
       @include flex;
@@ -52,11 +51,10 @@
     position: absolute;
     top: 0;
     right: 10px;
-
-    // transform: translate(-18%, -2%);
     color: #000;
     font-size: 30px;
     z-index: 1000;
+    cursor: pointer;
   }
 }
 
