--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -1,14 +1,16 @@
 .mask {
-  width: 100%;
-  height: 100%;
-  background-color: #ffffff;
-  position: fixed;
-  top: 0;
+  // width: 100%;
+  // height: 100%;
+  // background-color: #ffffff;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 100;
   transition: 0, 6s;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
 }
 .loader {
   width: 75px;
