--- a/src/sass/layout/_movie-gallery.scss
+++ b/src/sass/layout/_movie-gallery.scss
@@ -21,7 +21,9 @@
     transition: transform 250ms linear;
     cursor: pointer;
     &:hover {
-      transform: scale(1.03);
+      cursor: pointer;
+      box-shadow: 0px -2px 32px 1px rgba(0, 0, 0, 0.69);
+      transform: scale(1.04);
     }
   }
   &-title {
