--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -31,6 +31,7 @@
       color: $accent-color;
       font-size: 16px;
       transition-duration: 500ms;
+      cursor: pointer;
     }
   }
 
@@ -59,6 +60,7 @@
     font-size: 25px;
     background-color: $accent-color;
     color: $secondary-color;
+    cursor: pointer;
   }
   &:focus {
     border: 1px solid #0000004d;
