--- a/src/templates/footer.hbs
+++ b/src/templates/footer.hbs
@@ -6,7 +6,7 @@
         <svg class="animate__animated" width="14" height="13">
             <use href='{{src}}#icon-Vector'></use>
         </svg>
-        by <a href="#">GoIT Students</a>
+        by <a href="#" id="students-modal">GoIT Students</a>
     </p>
 
 </footer>
