--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -22,7 +22,7 @@
   box-sizing: border-box;
   text-align: center;
   padding: 0;
-  transition: background-color 250ms linear;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:not(:last-child) {
