--- a/src/sass/components/_filmInfo.scss
+++ b/src/sass/components/_filmInfo.scss
@@ -58,6 +58,8 @@
     text-transform: uppercase;
     outline: none;
     cursor: pointer;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
@@ -72,7 +74,7 @@
   }
 
   &__img {
-    width: 240px;
+    width: 100%;
     height: 356px;
     margin-bottom: 30px;
     // mixins
