--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -13,10 +13,15 @@
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal__body {
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal__body.is-open {
   visibility: visible;
   opacity: 1;
   pointer-events: auto;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -55,6 +60,12 @@
     font-size: 30px;
     z-index: 1000;
     cursor: pointer;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &-btn__icon:hover,
+  &-btn__icon:focus {
+    color: $accent-color;
   }
 }
 
@@ -62,7 +73,7 @@
   width: 240px;
   height: 356px;
   margin-bottom: 30px;
-  // mixins
+
   @include tablet {
     width: 264px;
     height: 374px;
@@ -80,4 +91,5 @@
   visibility: visible;
   opacity: 1;
   pointer-events: auto;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
