add function addToWatched and add fn addToQueue

--- a/src/templates/filmInfo.hbs
+++ b/src/templates/filmInfo.hbs
@@ -34,6 +34,8 @@
         {{overview}}
     </p>
     <div class="film-info-actions">
-        <button class="btn btn-outline film-info__button btn-watched" data-film-id="1">add to Watched</button>
-        <button class="btn btn-outline film-info__button btn-queue" data-film-id="1">add to queue</button>
+        <button class="btn btn-outline film-info__button btn-watched" data-film-id="watched" data-type='add'>add to
+            Watched</button>
+        <button class="btn btn-outline film-info__button btn-queue" data-film-id="queue" data-type='add'>add to
+            queue</button>
     </div>
