--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -1,7 +1,4 @@
 .mask {
-  // width: 100%;
-  // height: 100%;
-  // background-color: #ffffff;
   top: 10px;
   left: 50%;
   transform: translateX(-50%);
@@ -17,7 +14,7 @@
   height: 75px;
   border: 10px solid rgba(255, 165, 0, 0.6);
   border-radius: 50%;
-  border-left-color: orange;
+  border-left-color: #ffa500;
   animation: loader 1.3s linear infinite;
 }
 @keyframes loader {
