--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -18,8 +18,8 @@
   }
 }
 
-svg {
-  transition: color 250ms linear;
+svg path {
+  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 svg:hover path {
   stroke: $accent-color;
