--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -20,17 +20,17 @@
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
-    line-height: 16px;
+    line-height: 1.333;
     background-color: transparent;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:not(:last-child) {
       margin-right: 16px;
     }
+
     &:hover,
     &:focus {
       color: $accent-color;
-      font-size: 16px;
-      transition-duration: 500ms;
       cursor: pointer;
     }
   }
@@ -49,15 +49,14 @@
 .arrow-btn {
   width: 40px;
   height: 40px;
-  font-size: 20px;
+  font-size: 16px;
   background-color: $secondary-bg-color;
   border-radius: 5px;
   border: none;
   outline: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
-    transition-duration: 500ms;
-    font-size: 25px;
     background-color: $accent-color;
     color: $secondary-color;
     cursor: pointer;
