--- a/src/templates/filmList.hbs
+++ b/src/templates/filmList.hbs
@@ -1,12 +1,12 @@
 {{#each this}}
 <li class="gallery-movie-item">
 
-    <img class="movie-card-img js-open-modal" src="{{poster_path}}" alt="{{title}}" data-film-id="{{id}}" />
+    <img class="movie-card-img js-open-modal" src="{{poster_path}}" alt="{{original_title}}" data-film-id="{{id}}" />
     <h3 class="movie-card-title js-open-modal" data-film-id="{{id}}">{{original_title}}</h3>
 
     <div class="movie-card-info">
         <p class="movie-card-genre">{{genreList}}</p>
-        <p class="movie-card-release-year">{{release_date}}</p>
+        <p class="movie-card-release-year">{{realeseData}}</p>
         {{#if vote_average}}
         <p class="movie-card-vote is-visible">{{vote_average}}</p>
         {{/if}}
