--- a/src/templates/filmInfo.hbs
+++ b/src/templates/filmInfo.hbs
@@ -22,9 +22,11 @@
         </li>
         <li class="film-info__list-item">
             <span class="film-info__list-item__vote">Genre</span>
-            {{#each genres}}
-            <span class="film-info__list-item__characteristic">{{this.name}}</span>
-            {{/each}}
+            <div class="card-genres">
+                {{#each genres}}
+                <span class="film-info__list-item__characteristic">{{this.name}}</span>
+                {{/each}}
+            </div>
         </li>
     </ul>
 
@@ -32,7 +34,9 @@
 
     <p class="film-info__text">
         {{overview}}
+
     </p>
+
     <div class="film-info-actions">
         <button class="btn btn-outline film-info__button btn-watched" data-film-id="1">add to Watched</button>
         <button class="btn btn-outline film-info__button btn-queue" data-film-id="1">add to queue</button>
