--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -5,7 +5,7 @@
 }
 
 .button {
-  width: 129px;
+  width: 112px;
   height: 44px;
   font-family: 'Roboto', sans-serif;
   font-style: normal;
@@ -23,6 +23,12 @@
   text-align: center;
   padding: 0;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include tablet {
+    width: 125px;
+  }
+  @include desktop {
+    width: 129px;
+  }
 }
 
 .button:not(:last-child) {
