--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -4,7 +4,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-
   z-index: 1000;
   background-color: rgba(0, 0, 0, 0.25);
   visibility: hidden;
@@ -13,17 +12,12 @@
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal__body {
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .modal__body.is-open {
   visibility: visible;
   opacity: 1;
   pointer-events: auto;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal {
   &__body {
     position: fixed;
@@ -31,27 +25,35 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    // padding: 30px 20px;
     z-index: 1010;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    min-width: 280px;
+    height: 95vh;
+    overflow-y: auto;
   }
 
   &-content {
     background-color: $primary-modal-bg-color;
     color: $primary-color;
-    max-width: 848px;
+    min-width: 280px;
     padding-top: 48px;
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 40px;
+    width: 100%;
 
     @include tablet {
       @include flex;
+      min-width: 615px;
+    }
+
+    @include desktop {
+      min-width: 882px;
     }
   }
-
   &-btn__icon {
     position: absolute;
     top: 0;
@@ -62,7 +64,6 @@
     cursor: pointer;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-
   &-btn__icon:hover,
   &-btn__icon:focus {
     color: $accent-color;
@@ -73,20 +74,17 @@
   width: 240px;
   height: 356px;
   margin-bottom: 30px;
-
   @include tablet {
     width: 264px;
     height: 374px;
     margin-right: 32px;
   }
-
   @include desktop {
     width: 396px;
     height: 478px;
     margin-right: 30px;
   }
 }
-
 .backdrop.is-open {
   visibility: visible;
   opacity: 1;
