--- a/src/sass/layout/_movie-gallery.scss
+++ b/src/sass/layout/_movie-gallery.scss
@@ -9,15 +9,17 @@
   }
 }
 .js-gallery-movies {
-  @include grid(274px, auto-fill);
-  // @include grid(1tr, auto-fill);
+  @include grid(274px, auto-fit);
   grid-gap: 30px;
   position: relative;
+}
+
+.gallery-movie-item {
+  margin: 0 auto;
 }
 .movie-card {
   &-img {
     border-radius: 5px;
-    width: 100%;
     height: 398px;
     transition: transform 250ms linear;
     cursor: pointer;
