--- a/src/templates/filmInfo.hbs
+++ b/src/templates/filmInfo.hbs
@@ -1,10 +1,11 @@
-<img class="film-info__img film-info__box-card" src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="{{title}}" />
-
+<div class="img-container">
+    <img class="film-info__img film-info__box-card" src="https://image.tmdb.org/t/p/w500{{poster_path}}"
+        alt="{{title}}" />
+</div>
 <div class="film-info__box-card">
     <h2 class="film-info__title">{{original_title}}</h2>
     <ul class="film-info__list list">
         <li class="film-info__list-item">
-
             <span class="film-info__list-item__vote">Vote / Votes</span>
             <span class="film-info__list-item__characteristic">
                 <span class="film-info__list-item__votes">{{vote_average}}</span>
@@ -22,20 +23,18 @@
         </li>
         <li class="film-info__list-item">
             <span class="film-info__list-item__vote">Genre</span>
-            {{#each genres}}
-            <span class="film-info__list-item__characteristic">{{this.name}}</span>
-            {{/each}}
+            <div class="card-genres">
+                {{#each genres}}
+                <span class="film-info__list-item__characteristic">{{this.name}}</span>
+                {{/each}}
+            </div>
         </li>
     </ul>
-
     <h3 class="film-info-about__title">About</h3>
-
     <p class="film-info__text">
         {{overview}}
     </p>
     <div class="film-info-actions">
-        <button class="btn btn-outline film-info__button btn-watched" data-film-id="watched" data-type='add'>add to
-            Watched</button>
-        <button class="btn btn-outline film-info__button btn-queue" data-film-id="queue" data-type='add'>add to
-            queue</button>
+        <button class="btn btn-outline film-info__button btn-watched" data-film-id="1">add to Watched</button>
+        <button class="btn btn-outline film-info__button btn-queue" data-film-id="1">add to queue</button>
     </div>
