add fix pagination, add change page

--- a/src/templates/header-main.hbs
+++ b/src/templates/header-main.hbs
@@ -30,7 +30,7 @@
                 </a>
             </div>
 
-            <div class="header-list-nav">
+            <div class="header-list-nav" id='main-nav'>
                 <ul class="list-nav">
                     <li class="list-nav-item">
                         <a class="list-item-link active" href='/home'>Home</a>
