--- a/src/templates/filmInfo.hbs
+++ b/src/templates/filmInfo.hbs
@@ -37,4 +37,6 @@
     <div class="film-info-actions">
         <button class="btn btn-outline film-info__button btn-watched" data-film-id="1">add to Watched</button>
         <button class="btn btn-outline film-info__button btn-queue" data-film-id="1">add to queue</button>
+        <button class="btn btn-outline film-info__button btn-youtube" data-film-id="1">YouTube trailer</button>
+
     </div>
