--- a/src/templates/pagination.hbs
+++ b/src/templates/pagination.hbs
@@ -1,4 +1,4 @@
-<button id="arrow-left" class="arrow-btn" disabled>&lt;</button>
+<button id="arrow-left" class="arrow-btn">&lt;</button>
 <div id="pagination-btns" class="pagination-btns">
     {{#each list}}
     <button class="pagination-button">{{this}}</button>
