added our teacher

--- a/src/templates/modalStudents.hbs
+++ b/src/templates/modalStudents.hbs
@@ -34,7 +34,7 @@
     <li class="team-card-list-item">
         <img src="../images/goit-students-photos/Fahriddin.jpg" alt="" class="team-card-list-item-img" />
         <p class="student-name">Fahriddin</p>
-        <p class="student-name">"The best"</p>
+        <p class="student-name">"The Best Modal Maker"</p>
         <p class="student-development">Front End Developer</p>
         <a href="mailto:fahriddinnomanjanov@gmail.com" class="student-email link">fahriddinnomanjanov@gmail.com</a>
         <a class="student-github link" href="https://github.com/fahriddinnomanjanov">github-repozitories</a>
@@ -54,5 +54,17 @@
         <p class="student-development">Front End Developer</p>
         <a href="mailto:danilka4412@gmail.com" class="student-email link">danilka4412@gmail.com</a>
         <a class="student-github link" href="https://github.com/danielnedefo">github-repozitories</a>
+    </li>
+    <li class="team-card-list-item">
+        <img src="../images/goit-students-photos/Bogdan.jpg" alt="" class="team-card-list-item-img" />
+        <p class="student-name">Bogdan</p>
+        <p class="student-name">"Lord of Darkness"</p>
+        <p class="student-development">Senior Full-Stack Developer</p>
+    </li>
+    <li class="team-card-list-item">
+        <img src="../images/goit-students-photos/Andrii.jpg" alt="" class="team-card-list-item-img" />
+        <p class="student-name">Andrii</p>
+        <p class="student-name">"New Born"</p>
+        <p class="student-development">Senior Front End Developer</p>
     </li>
 </ul>
