--- a/src/sass/components/_filmInfo.scss
+++ b/src/sass/components/_filmInfo.scss
@@ -26,8 +26,10 @@
       background-color: $secondary-bg-color;
       border-radius: 5px;
     }
+  }
 
-    &__box-card {
+  &__box-card {
+    @include tablet {
       margin-left: 32px;
     }
   }
@@ -49,6 +51,7 @@
   }
   &__button {
     padding: 14px 10px;
+    width: 126px;
     border: 1px solid $primary-color;
     box-sizing: border-box;
     border-radius: 5px;
@@ -71,30 +74,30 @@
 
     @include tablet-end {
       &:not(:last-child) {
-        margin-right: 10px;
-      }
-    }
-
-    @include tablet-end {
-      &:not(:last-child) {
         margin-bottom: 10px;
       }
     }
   }
 
   &__img {
-    width: 100%;
-    height: 356px;
+    max-width: 100%;
+    margin: 0 auto 20px;
 
     @include tablet {
       width: 264px;
-      height: 374px;
       margin-right: 32px;
     }
     @include desktop {
       width: 350px;
-      height: 478px;
-      margin-right: 30px;
+      margin-right: 0px;
+    }
+  }
+  &-actions {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    @include desktop {
+      justify-content: space-between;
     }
   }
 }
