--- a/src/sass/components/_modalSudents.scss
+++ b/src/sass/components/_modalSudents.scss
@@ -1,12 +1,10 @@
 .team-card-list {
-  // position: fixed;
   &-item {
-    margin-bottom: 30px;
-    height: 100%;
+    height: 80%;
 
     &-img {
       width: 100%;
-      height: 70%;
+      height: 65%;
       border-radius: 10px;
       margin-bottom: 20px;
     }
@@ -15,7 +13,7 @@
 
 .student-name {
   font-size: 16px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .student-development {
@@ -26,24 +24,34 @@
 
 .student-email {
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   cursor: pointer;
   font-size: 14px;
-  color: $accent-color;
+  color: teal;
 }
 
 .student-github {
   display: block;
   font-size: 14px;
   cursor: pointer;
-  color: $accent-color;
+  color: teal;
 }
 
 .team-card-list-item {
   text-align: center;
-  border: 1px solid black;
-  padding: 10px;
-  border-radius: 10px;
+  box-shadow: 5px 5px 5px 0px rgba(5, 41, 69, 0.75);
+  -webkit-box-shadow: 5px 5px 5px 0px rgba(5, 41, 69, 0.75);
+  -moz-box-shadow: 5px 5px 5px 0px rgba(5, 41, 69, 0.75);
+
+  &:hover,
+  &:focus {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translate(-5px, -5px);
+    transition: transform 500ms linear;
+    box-shadow: 10px 10px 10px 2px rgba(5, 41, 69, 0.75);
+    -webkit-box-shadow: 10px 10px 10px 2px rgba(5, 41, 69, 0.75);
+    -moz-box-shadow: 10px 10px 10px 2px rgba(5, 41, 69, 0.75);
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -53,30 +61,31 @@
 }
 @media screen and (min-width: 768px) {
   .team-card-list {
-    height: 100%;
-    margin-left: -30px;
-    margin-top: -30px;
+    // height: 100%;
+    margin-left: -15px;
+    margin-top: -15px;
     display: flex;
     flex-wrap: wrap;
   }
 
   .team-card-list-item {
-    margin-left: 30px;
-    margin-top: 30px;
-    width: calc((100% - 60px) / 2);
+    margin-left: 15px;
+    margin-top: 15px;
+    width: calc((100% - 30px) / 2);
   }
 }
+
 @media screen and (min-width: 1024px) {
   .team-card-list {
-    margin-left: -30px;
-    margin-top: -30px;
+    margin-left: -15px;
+    margin-top: -15px;
     display: flex;
     flex-wrap: wrap;
   }
 
   .team-card-list-item {
-    margin-left: 30px;
-    margin-top: 30px;
-    width: calc((100% - 90px) / 3);
+    margin-left: 15px;
+    margin-top: 15px;
+    width: calc((100% - 45px) / 3);
   }
 }
